--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@seatsio/seatsio-angular": "^12.0.0",
+    "ngx-cookie-service": "^16.0.1",
     "ngx-paypal": "^11.0.0",
     "rxjs": "~7.8.0",
+    "seatsio": "^77.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
